第二次推送

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 </main>
 <div class="a06" ></div>
 <footer>
-    雖僅共教育使用，但也不會有人抄
+    <p>雖僅共教育使用，但也不會有人抄</p>
+    <p>這是第二次推送，別扣我分</p>
 </footer>
 
    
